--- a/www/css/styles-add-my-car.css
+++ b/www/css/styles-add-my-car.css
@@ -21,6 +21,10 @@
     min-width: 100px;
   }
 
+  .wrapper .droplist {
+    width: 260px;
+  }
+
   .b-add-car__form input,
   .b-add-car__form .droplist
    {
@@ -107,6 +111,8 @@
 
     .b-add-car__form-add {
       display: -webkit-flex;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
       margin-top: 15px;
       padding-bottom: 30px;
@@ -114,6 +120,8 @@
     }
       .b-add-car__form-add p {
         -webkit-flex: 1;
+        -webkit-box-flex: 1;
+        -ms-flex: 1;
         flex: 1;
         position: relative;
         text-align: center;
@@ -133,6 +141,7 @@
         border-right: 1px solid transparent;
         border-bottom: 1px solid transparent;
         -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
         transform: rotate(45deg);
       }
         .b-add-car__form-add span {
@@ -141,6 +150,8 @@
           border-bottom: 1px dashed #1C5BC9;
           -webkit-transition: color 0.2s ease,
                               border-bottom 0.2s ease;
+          -webkit-transition: color 0.2s ease,
+                      border-bottom 0.2s ease;
           transition: color 0.2s ease,
                       border-bottom 0.2s ease;
         }
