--- a/www/css/styles-community.css
+++ b/www/css/styles-community.css
@@ -4,16 +4,22 @@
   .b-community .b-main-title {
     display: -webkit-flex;
     display: -ms-flexbox;
+    display: -webkit-box;
     display: flex;
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
+    -webkit-box-pack: justify;
     justify-content: space-between;
     -webkit-align-items: center;
     -ms-flex-align: center;
+    -webkit-box-align: center;
     align-items: center;
     margin-top: 26px;
     margin-bottom: 20px;
   }
+    .b-main-title.title-search h1 {
+      margin-right: auto;
+    }
     .b-main-title .b-filter__switch {
       max-width: 435px;
     }
@@ -22,15 +28,13 @@
   }
   .b-community__item {
     -ms-flex-preferred-size: calc(33.33337% - 20px);
-    -webkit-flex-basis: calc(33.33337% - 20px);
+    -webkit-flex-basis: -webkit-calc(33.33337% - 20px);
     flex-basis: calc(33.33337% - 20px);
+    max-width: -webkit-calc(33.33337% - 20px);
     max-width: calc(33.33337% - 20px);
   }
     .b-community__item img {
       width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 4px;
     }
     .b-community__item-info {
       position: relative;
@@ -42,6 +46,7 @@
         left: -5px;
         display: -webkit-flex;
         display: -ms-flexbox;
+        display: -webkit-box;
         display: flex;
         height: 60px;
         width: 60px;
@@ -89,6 +94,8 @@
     border-left: none;
     background-color: #FFFFFF;
     color: #0038A8;
+    -webkit-transition: color 0.2s ease,
+                background-color 0.2s ease;
     transition: color 0.2s ease,
                 background-color 0.2s ease;
   }
@@ -114,6 +121,11 @@
     .b-add-car__form-item.droplist {
       width: 100%;
     }
+      .b-add-car__form-item.droplist input.dlsearch,
+      .b-add-car__form-item.droplist .dListText,
+      .b-add-car__form-item.droplist .SelectItem {
+        text-align: center;
+      }
     .b-add-car__form-item.droplist:not(:first-child) {
       margin-top: 20px;
     }    .b-filter__form .button.middle {
