--- a/www/css/styles-one-company.css
+++ b/www/css/styles-one-company.css
@@ -7,11 +7,13 @@ h4 {
   .b-one-company__info {
     display: -webkit-flex;
     display: -ms-flexbox;
+    display: -webkit-box;
     display: flex;
   }
     .b-one-company__title-logo {
       -webkit-flex: 1;
       -ms-flex: 1;
+      -webkit-box-flex: 1;
       flex: 1;
       max-width: 185px;
       height: 185px;
@@ -22,18 +24,35 @@ h4 {
     .b-one-company__title-note {
       -webkit-flex: 3;
       -ms-flex: 3;
+      -webkit-box-flex: 3;
       flex: 3;
       margin-right: 40px;
     }
       .b-one-company__tag {
         margin-bottom: 15px;
       }
-      .b-one-company__title-note h1 {
-        float: left;
+      .b-one-company__title-note-top {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+        -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
         margin-bottom: 30px;
       }
-      .b-one-company__short-about {
-        clear: both;
+      .wrap-rating {
+        -webkit-flex: 1 0 30%;
+        -ms-flex: 1 30%;
+        -webkit-box-flex: 1;
+        flex: 1 0 230%;
+        max-width: 30%;
+        text-align: right;
       }
 .b-one-company__info {
   margin-top: 40px;
@@ -46,6 +65,7 @@ h4 {
     .b-one-company__info-text {
       -webkit-flex: 1;
       -ms-flex: 1;
+      -webkit-box-flex: 1;
       flex: 1;
       max-width: 185px;
     }
@@ -53,6 +73,7 @@ h4 {
     .b-one-company__info-map {
       -webkit-flex: 3;
       -ms-flex: 3;
+      -webkit-box-flex: 3;
       flex: 3;
       height: 250px;
       margin-right: 40px;
@@ -93,9 +114,11 @@ h4 {
     .b-one-company__news-wrapp-item {
       display: -webkit-flex;
       display: -ms-flexbox;
+      display: -webkit-box;
       display: flex;
       -webkit-align-items: center;
       -ms-flex-align: center;
+      -webkit-box-align: center;
       align-items: center;
       padding: 20px 0;
       border-bottom: 1px dotted #CECECE;
@@ -107,6 +130,7 @@ h4 {
       .b-one-company__news-wrapp-item img {
         -webkit-flex: 2;
         -ms-flex: 2;
+        -webkit-box-flex: 2;
         flex: 2;
         height: 150px;
         border-radius: 4px;
@@ -115,6 +139,7 @@ h4 {
       .b-one-company__news-wrapp-item-text {
         -webkit-flex: 5;
         -ms-flex: 5;
+        -webkit-box-flex: 5;
         flex: 5;
         margin-left: 20px;
       }
@@ -141,6 +166,7 @@ h4 {
     .b-one-company__img-block {
       display: -webkit-flex;
       display: -ms-flexbox;
+      display: -webkit-box;
       display: flex;
       -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
@@ -150,9 +176,11 @@ h4 {
     }
       .b-one-company__img-item {
         height: 120px;
-        -webkit-flex: 0 0 calc(25% - 20px);
+        -webkit-flex: 0 0 -webkit-calc(25% - 20px);
         -ms-flex: 0 0 calc(25% - 20px);
+        -webkit-box-flex: 0;
         flex: 0 0 calc(25% - 20px);
+        min-width: -webkit-calc(25% - 10px);
         min-width: calc(25% - 10px);
         margin-right: 10px;
         margin-bottom: 10px;
@@ -189,7 +217,9 @@ h4 {
         height: 265px;
         background-color: #FFFFFF;
         border-radius: 4px;
+        -webkit-box-shadow: 0px 0px 5px rgba(130, 130, 130, 0.2);
         box-shadow: 0px 0px 5px rgba(130, 130, 130, 0.2);
+        -webkit-transition: opacity 0.2s ease;
         transition: opacity 0.2s ease;
       }
     .b-one-company__form {
