--- a/www/css/styles-aside-filter.css
+++ b/www/css/styles-aside-filter.css
@@ -28,6 +28,14 @@
     display: -ms-flexbox;
     display: flex;
   }
+  .b-main-title .b-filter__switch {
+    display: none;
+  }
+    .b-main-title  .show-filter.b-filter__switch {
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+    }
   .b-filter__switch-item {
     -webkit-flex: 1;
     -ms-flex: 1;
@@ -36,13 +44,15 @@
     padding: 0 3px;
     white-space: nowrap;
     text-align: center;
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     line-height: 36px;
     border: 1px solid rgba(28, 91, 201, 0.1);
     border-left: none;
     background-color: #FFFFFF;
     color: #0038A8;
     overflow: hidden;
+    text-overflow: ellipsis;
+    cursor: pointer;
     transition: color 0.2s ease,
                 background-color 0.2s ease;
   }
