--- a/www/css/styles-flea-market.css
+++ b/www/css/styles-flea-market.css
@@ -1,6 +1,9 @@
 .b-ad-block {
   
 }
+  .b-ad-block h3:after {
+    content: '\00A0('attr(data-sum)')';
+  }
   .b-ad__container {
     padding-top: 26px;
   }
@@ -62,15 +65,10 @@
     display: -ms-flexbox;
     display: flex;
     max-width: 25%;
-    height: 100px;
     margin-right: 20px;
   }
-   .b-ad__item-img img {
+   .b-ad__item-img figure {
       margin: auto;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 4px;
      }
   .b-ad__item-info {
     display: -webkit-flex;
@@ -227,6 +225,11 @@
       background-repeat: no-repeat;
       background-position: center center;
       background-size: 185px auto;
+    }
+
+    .b-filter-wrapp input.dlsearch,
+    .b-filter-wrapp .dListText {
+      text-align: center;
     }
 
 @media (max-width: 1000px) {
