--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -112,6 +112,7 @@ figure {
     right: 0;
     height: 100%;
     width: 100%;
+    object-fit: cover;
   }
 
 a {
@@ -791,6 +792,46 @@ label {
       }
 /*-------------------------*/
 
+  .message-popup[popup-message="close"] {
+    opacity: 0;
+    pointer-events: none;
+  }
+  .message-popup[popup-message="open"] {
+    opacity: 1;
+    pointer-events: auto;
+  }
+    .message-popup {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0,0,0,0.7);
+      z-index: 10001;
+    }
+      .message-popup-wrapp {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -297px;
+        margin-top: -150px;
+        padding: 20px;
+        width: 595px;
+        height: 265px;
+        background-color: #FFFFFF;
+        border-radius: 4px;
+        -webkit-box-shadow: 0px 0px 5px rgba(130, 130, 130, 0.2);
+        box-shadow: 0px 0px 5px rgba(130, 130, 130, 0.2);
+        -webkit-transition: opacity 0.2s ease;
+        transition: opacity 0.2s ease;
+      }
+    .message-popup__form {
+      margin-top: 20px;
+    }
+      .message-popup__form input[type='submit']{
+        margin-top: 20px;
+      }
+
   .block-redactor.subtext {
     position: absolute;
     top: 4px;
@@ -863,26 +904,54 @@ label {
         color: #A8A8A8;
         background-color: rgba(81, 81, 81, 0.1);
       }
-
-  /* Комментарии */
-    .b-new__item-bottom {
-      height: 0.7rem;
-      color: #0038A8;
-    }
-      .b-new__item-bottom .comments {
-      }
-        .b-new__item-bottom .comments:before {
+        .rating:before {
           margin-right: 5px;
           font-family: 'FontAwesome';
           font-weight: normal;
           color: #333333;
           font-size: 0.75rem;
-          content: '\f0e5';
+          content: '\f201\00A0';
         }
-      .b-new__item-bottom .comments:after {
-          margin: 0 5px;
+        .comments {
+          margin-left: 20px;
+        }
+        .comments:before {
+          margin-right: 5px;
+          font-family: 'FontAwesome';
+          font-weight: normal;
           color: #333333;
-          content: attr(data-name);
+          font-size: 0.75rem;
+          content: '\f0e5\00A0';
+        }
+        .like,
+        .dislike {
+          position: relative;
+          display: inline-block;
+          height: 50px;
+          width: 50px;
+          cursor: pointer;
+        }
+        .like:before,
+        .dislike:before {
+          position: absolute;
+          top: 0;
+          left: 0;
+          margin-right: 5px;
+          font-family: 'FontAwesome';
+          font-weight: normal;
+          color: #333333;
+          font-size: 2rem;
+          transition: font-size 0.2s ease;
+        }
+        .like:hover:before,
+        .dislike:hover:before {
+          font-size: 2.1rem;
+        }
+        .like:before {
+          content: '\f087\00A0';
+        }
+        .dislike:before {
+          content: '\f088\00A0';
         }
 
   /* Социальные сети */
@@ -1013,8 +1082,10 @@ main {
   margin-top: 26px;
   margin-bottom: 20px;
 }
-  .title-search.b-main-title h1 {
+  .title-search.b-main-title h1,
+  .title-search.b-main-title h3, {
     margin: 0;
+    margin-right: auto;
   }
   .title-search.b-main-title .b-filter__switch {
     -webkit-flex: 3;
@@ -1022,6 +1093,25 @@ main {
     -webkit-box-flex: 3;
     flex: 3;
     margin: 0 30px;
+  }
+  .b-filter__switch-item {
+    float: left;
+    height: 40px;
+    width: 33.3333337%;
+    text-align: center;
+    font-size: 0.7rem;
+    line-height: 36px;
+    border-left: none;
+    background-color: #FFFFFF;
+    color: #0038A8;
+    -webkit-transition: color 0.2s ease,
+              background-color 0.2s ease;
+     transition: color 0.2s ease,
+              background-color 0.2s ease;
+    }
+    .m-filter__switch-item_active.b-filter__switch-item {
+      background-color: #0038A8;
+      color: #FFFFFF;
   }
   .title-search.b-main-title .b-filter__find {
     position: relative;
